file (GLOB_RECURSE FHEDRIVER_SRC_FILES CONFIGURE_DEPENDS src/*.cxx)

set (FHEDRIVER_INCLUDE_DIRS "")
list (APPEND FHEDRIVER_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include")
list (APPEND FHEDRIVER_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/include")
include_directories (${FHEDRIVER_INCLUDE_DIRS})
set (FHEDRIVER_INCLUDE_DIRS "${FHEDRIVER_INCLUDE_DIRS}" CACHE INTERNAL "")

add_library (fhedriver_obj OBJECT ${FHEDRIVER_SRC_FILES})

set_property (TARGET fhedriver_obj PROPERTY POSITION_INDEPENDENT_CODE 1)

if (BUILD_STATIC)
	add_library (FHEdriver STATIC $<TARGET_OBJECTS:fhedriver_obj>)
	set_property (TARGET FHEdriver PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
	install (TARGETS FHEdriver EXPORT FHETargets DESTINATION lib)
endif ()

if (BUILD_STATIC)
	add_executable (fhe_cmplr ${FHEDRIVER_SRC_FILES})
	target_link_libraries (fhe_cmplr ${FHE_LIBS} ${EXTRA_LIBS} ${PERF_LIBS})
	install (TARGETS fhe_cmplr RUNTIME DESTINATION bin)
endif ()

add_custom_target (fhedriver_all)

if (BUILD_STATIC)
	set (FHEDRIVER_LIBS ${FHEDRIVER_LIBS} PUBLIC FHEdriver)
	add_dependencies (fhedriver_all FHEdriver)
endif()

set (FHEDRIVER_UTAPP "")
if (BUILD_UNITTEST)
	file (GLOB FHEDRIVER_UNITTEST_SRC_FILES CONFIGURE_DEPENDS unittest/*.cxx)
	set (FHEDRIVER_UNITTEST_SRC_FILES ${FHEDRIVER_UNITTEST_SRC_FILES})
	add_executable (ut_fhedriver ${FHEDRIVER_UNITTEST_SRC_FILES} ${UNITTESTMAIN})
	set_property (TARGET ut_fhedriver PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/unittest)
	target_link_libraries (ut_fhedriver ${FHE_UTLIBS})
	set (FHEDRIVER_UTAPP ${FHEDRIVER_UTAPP} ut_fhedriver)

	add_dependencies (fhedriver_all ut_fhedriver)

	add_custom_command (OUTPUT run_fhedriver_utapp WORKING_DIRECTORY ${CMAKE_BINARY_DIR} COMMAND ${CMAKE_BINARY_DIR}/unittest/ut_fhedriver)
	add_custom_target (test_fhedriver_ut DEPENDS ut_fhedriver run_fhedriver_utapp)
	add_test( NAME ut_fhedriver COMMAND ${CMAKE_BINARY_DIR}/unittest/ut_fhedriver)
endif()

set (FHEDRIVER_TESTAPP "")
if (FHE_BUILD_TEST)
	file (GLOB FHEDRIVER_TESTAPP_SRC_FILES CONFIGURE_DEPENDS test/*.cxx)
	foreach (app ${FHEDRIVER_TESTAPP_SRC_FILES})
		get_filename_component (exe ${app} NAME_WE)
		add_executable (${exe} ${app})
		set_property (TARGET ${exe} PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/test)
		set (FHEDRIVER_TESTAPP ${FHEDRIVER_TESTAPP} ${exe})
		target_link_libraries (${exe} ${FHE_LIBS} ${EXTRA_LIBS})
		add_test( NAME ${exe} COMMAND ${CMAKE_BINARY_DIR}/test/${exe})
	endforeach ()

	add_custom_target (fhedriver_test)
	add_dependencies (fhedriver_test ${FHEDRIVER_TESTAPP})
	add_dependencies (fhedriver_all fhedriver_test)
endif()

set (FHEDRIVER_EGAPP "")
if (FHE_BUILD_EXAMPLE)
	file (GLOB FHEDRIVER_EXAMPLE_SRC_FILES CONFIGURE_DEPENDS example/*.cxx)
	foreach (app ${FHEDRIVER_EXAMPLE_SRC_FILES})
		get_filename_component (exe ${app} NAME_WE)
		add_executable (${exe} ${app})
		set_property (TARGET ${exe} PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/example)
		set (FHEDRIVER_EGAPP ${FHEDRIVER_EGAPP} ${exe})
		target_link_libraries (${exe} ${FHE_LIBS} ${EXTRA_LIBS})
		# add_test( NAME ${exe} COMMAND ${CMAKE_BINARY_DIR}/example/${exe})
	endforeach ()

	add_custom_target (fhedriver_example)
	add_dependencies (fhedriver_example ${FHEDRIVER_EGAPP})
	add_dependencies (fhedriver_all fhedriver_example)
endif ()

if (FHE_INSTALL_APP)
	install (TARGETS ${FHEDRIVER_UTAPP} RUNTIME DESTINATION unittest)
	install (TARGETS ${FHEDRIVER_BMAPP} RUNTIME DESTINATION bench)
	install (TARGETS ${FHEDRIVER_TESTAPP} RUNTIME DESTINATION test)
	install (TARGETS ${FHEDRIVER_EGAPP} RUNTIME DESTINATION example)
endif ()
