file (GLOB_RECURSE FHEOPT_SRC_FILES CONFIGURE_DEPENDS src/*.cxx)

set (FHEOPT_INCLUDE_DIRS "")
list (APPEND FHEOPT_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include")
list (APPEND FHEOPT_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/include")
include_directories (${FHEOPT_INCLUDE_DIRS})
set (FHEOPT_INCLUDE_DIRS "${FHEOPT_INCLUDE_DIRS}" CACHE INTERNAL "")

add_library (fheopt_obj OBJECT ${FHEOPT_SRC_FILES})

set_property (TARGET fheopt_obj PROPERTY POSITION_INDEPENDENT_CODE 1)

if (BUILD_STATIC)
	add_library (FHEopt STATIC $<TARGET_OBJECTS:fheopt_obj>)
	set_property (TARGET FHEopt PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
	install (TARGETS FHEopt EXPORT FHETargets DESTINATION lib)
endif ()

add_custom_target (fheopt_all)

if (BUILD_STATIC)
	set (FHEOPT_LIBS ${FHEOPT_LIBS} PUBLIC FHEopt)
	add_dependencies (fheopt_all FHEopt)
endif()

set (FHEOPT_UTAPP "")
if (BUILD_UNITTEST)
	file (GLOB FHEOPT_UNITTEST_SRC_FILES CONFIGURE_DEPENDS unittest/*.cxx)
	set (FHEOPT_UNITTEST_SRC_FILES ${FHEOPT_UNITTEST_SRC_FILES})
	add_executable (ut_fheopt ${FHEOPT_UNITTEST_SRC_FILES} ${UNITTESTMAIN})
	set_property (TARGET ut_fheopt PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/unittest)
	target_link_libraries (ut_fheopt ${FHE_UTLIBS})
	set (FHEOPT_UTAPP ${FHEOPT_UTAPP} ut_fheopt)

	add_dependencies (fheopt_all ut_fheopt)

	add_custom_command (OUTPUT run_fheopt_utapp WORKING_DIRECTORY ${CMAKE_BINARY_DIR} COMMAND ${CMAKE_BINARY_DIR}/unittest/ut_fheopt)
	add_custom_target (test_fheopt_ut DEPENDS ut_fheopt run_fheopt_utapp)
	add_test( NAME ut_fheopt COMMAND ${CMAKE_BINARY_DIR}/unittest/ut_fheopt)
endif()

set (FHEOPT_TESTAPP "")
if (FHE_BUILD_TEST)
	file (GLOB FHEOPT_TESTAPP_SRC_FILES CONFIGURE_DEPENDS test/*.cxx)
	foreach (app ${FHEOPT_TESTAPP_SRC_FILES})
		get_filename_component (exe ${app} NAME_WE)
		add_executable (${exe} ${app})
		set_property (TARGET ${exe} PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/test)
		set (FHEOPT_TESTAPP ${FHEOPT_TESTAPP} ${exe})
		target_link_libraries (${exe} ${FHE_LIBS})
		add_test( NAME ${exe} COMMAND ${CMAKE_BINARY_DIR}/test/${exe})
	endforeach ()

	add_custom_target (fheopt_test)
	add_dependencies (fheopt_test ${FHEOPT_TESTAPP})
	add_dependencies (fheopt_all fheopt_test)
endif()

set (FHEOPT_EGAPP "")
if (FHE_BUILD_EXAMPLE)
	file (GLOB FHEOPT_EXAMPLE_SRC_FILES CONFIGURE_DEPENDS example/*.cxx)
	foreach (app ${FHEOPT_EXAMPLE_SRC_FILES})
		get_filename_component (exe ${app} NAME_WE)
		add_executable (${exe} ${app})
		set_property (TARGET ${exe} PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/example)
		set (FHEOPT_EGAPP ${FHEOPT_EGAPP} ${exe})
		target_link_libraries (${exe} ${FHE_LIBS})
		add_test( NAME ${exe} COMMAND ${CMAKE_BINARY_DIR}/example/${exe})
	endforeach ()

	add_custom_target (fheopt_example)
	add_dependencies (fheopt_example ${FHEOPT_EGAPP})
	add_dependencies (fheopt_all fheopt_example)
endif ()

if (FHE_INSTALL_APP)
	install (TARGETS ${FHEOPT_UTAPP} RUNTIME DESTINATION unittest)
	install (TARGETS ${FHEOPT_BMAPP} RUNTIME DESTINATION bench)
	install (TARGETS ${FHEOPT_TESTAPP} RUNTIME DESTINATION test)
	install (TARGETS ${FHEOPT_EGAPP} RUNTIME DESTINATION example)
endif ()