file (GLOB_RECURSE FHEPOLY_SRC_FILES CONFIGURE_DEPENDS src/*.cxx)

set (FHEPOLY_INCLUDE_DIRS "")
list (APPEND FHEPOLY_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include")
list (APPEND FHEPOLY_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/include")
include_directories (${FHEPOLY_INCLUDE_DIRS})
set (FHEPOLY_INCLUDE_DIRS "${FHEPOLY_INCLUDE_DIRS}" CACHE INTERNAL "")

add_library (fhepoly_obj OBJECT ${FHEPOLY_SRC_FILES})

set_property (TARGET fhepoly_obj PROPERTY POSITION_INDEPENDENT_CODE 1)

if (BUILD_STATIC)
	add_library (FHEpoly STATIC $<TARGET_OBJECTS:fhepoly_obj>)
	set_property (TARGET FHEpoly PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
	install (TARGETS FHEpoly EXPORT FHETargets DESTINATION lib)
endif ()

add_custom_target (fhepoly_all)

if (BUILD_STATIC)
	set (FHEPOLY_LIBS ${FHEPOLY_LIBS} PUBLIC FHEpoly)
	add_dependencies (fhepoly_all FHEpoly)
endif()

set (FHEPOLY_UTAPP "")
if (BUILD_UNITTEST)
	file (GLOB FHEPOLY_UNITTEST_SRC_FILES CONFIGURE_DEPENDS unittest/*.cxx)
	set (FHEPOLY_UNITTEST_SRC_FILES ${FHEPOLY_UNITTEST_SRC_FILES})
	add_executable (ut_fhepoly ${FHEPOLY_UNITTEST_SRC_FILES} ${UNITTESTMAIN})
	set_property (TARGET ut_fhepoly PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/unittest)
	target_link_libraries (ut_fhepoly ${FHE_UTLIBS})
	set (FHEPOLY_UTAPP ${FHEPOLY_UTAPP} ut_fhepoly)

	add_dependencies (fhepoly_all ut_fhepoly)

	add_custom_command (OUTPUT run_fhepoly_utapps WORKING_DIRECTORY ${CMAKE_BINARY_DIR} COMMAND ${CMAKE_BINARY_DIR}/unittest/ut_fhepoly)
	add_custom_target (test_fhepoly_ut DEPENDS ut_fhepoly run_fhepoly_utapps)
	add_test( NAME ut_fhepoly COMMAND ${CMAKE_BINARY_DIR}/unittest/ut_fhepoly)
endif()

set (FHEPOLY_TESTAPP "")
if (FHE_BUILD_TEST)
	file (GLOB FHEPOLY_TESTAPP_SRC_FILES CONFIGURE_DEPENDS test/*.cxx)
	foreach (app ${FHEPOLY_TESTAPP_SRC_FILES})
		get_filename_component (exe ${app} NAME_WE)
		add_executable (${exe} ${app})
		set_property (TARGET ${exe} PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/test)
		set (FHEPOLY_TESTAPP ${FHEPOLY_TESTAPP} ${exe})
		target_link_libraries (${exe} ${FHE_LIBS})
		add_test( NAME ${exe} COMMAND ${CMAKE_BINARY_DIR}/test/${exe})
	endforeach ()

	add_custom_target (fhepoly_test)
	add_dependencies (fhepoly_test ${FHEPOLY_TESTAPP})
	add_dependencies (fhepoly_all fhepoly_test)
endif()

set (FHEPOLY_EGAPP "")
if (FHE_BUILD_EXAMPLE)
	file (GLOB FHEPOLY_EXAMPLE_SRC_FILES CONFIGURE_DEPENDS example/*.cxx)
	foreach (app ${FHEPOLY_EXAMPLE_SRC_FILES})
		get_filename_component (exe ${app} NAME_WE)
		add_executable (${exe} ${app})
		set_property (TARGET ${exe} PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/example)
		set (FHEPOLY_EGAPP ${FHEPOLY_EGAPP} ${exe})
		target_link_libraries (${exe} ${FHE_LIBS})
		add_test( NAME ${exe} COMMAND ${CMAKE_BINARY_DIR}/example/${exe})
	endforeach ()

	add_custom_target (fhepoly_example)
	add_dependencies (fhepoly_example ${FHEPOLY_EGAPP})
	add_dependencies (fhepoly_all fhepoly_example)
endif ()

if (FHE_INSTALL_APP)
	install (TARGETS ${FHEPOLY_UTAPP} RUNTIME DESTINATION unittest)
	install (TARGETS ${FHEPOLY_BMAPP} RUNTIME DESTINATION bench)
	install (TARGETS ${FHEPOLY_TESTAPP} RUNTIME DESTINATION test)
	install (TARGETS ${FHEPOLY_EGAPP} RUNTIME DESTINATION example)
endif ()