file (GLOB_RECURSE FHESIHE_SRC_FILES CONFIGURE_DEPENDS src/*.cxx)

set (FHESIHE_INCLUDE_DIRS "")
list (APPEND FHESIHE_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include")
list (APPEND FHESIHE_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/include")
include_directories (${FHESIHE_INCLUDE_DIRS})
set (FHESIHE_INCLUDE_DIRS "${FHESIHE_INCLUDE_DIRS}" CACHE INTERNAL "")

add_library (fhesihe_obj OBJECT ${FHESIHE_SRC_FILES})

set_property (TARGET fhesihe_obj PROPERTY POSITION_INDEPENDENT_CODE 1)

if (BUILD_STATIC)
	add_library (FHEsihe STATIC $<TARGET_OBJECTS:fhesihe_obj>)
	set_property (TARGET FHEsihe PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
	install (TARGETS FHEsihe EXPORT FHETargets DESTINATION lib)
endif ()

add_custom_target (fhesihe_all)

if (BUILD_STATIC)
	set (FHESIHE_LIBS ${FHESIHE_LIBS} PUBLIC FHEsihe)
	add_dependencies (fhesihe_all FHEsihe)
endif()

set (FHESIHE_UTAPP "")
if (BUILD_UNITTEST)
	file (GLOB FHESIHE_UNITTEST_SRC_FILES CONFIGURE_DEPENDS unittest/*.cxx)
	set (FHESIHE_UNITTEST_SRC_FILES ${FHESIHE_UNITTEST_SRC_FILES})
	add_executable (ut_fhesihe ${FHESIHE_UNITTEST_SRC_FILES} ${UNITTESTMAIN})
	set_property (TARGET ut_fhesihe PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/unittest)
	target_link_libraries (ut_fhesihe ${FHE_UTLIBS})
	set (FHESIHE_UTAPP ${FHESIHE_UTAPP} ut_fhesihe)

	add_dependencies (fhesihe_all ut_fhesihe)

	add_custom_command (OUTPUT run_fhesihe_utapp WORKING_DIRECTORY ${CMAKE_BINARY_DIR} COMMAND ${CMAKE_BINARY_DIR}/unittest/ut_fhesihe)
	add_custom_target (test_fhesihe_ut DEPENDS ut_fhesihe run_fhesihe_utapp)
	add_test( NAME ut_fhesihe COMMAND ${CMAKE_BINARY_DIR}/unittest/ut_fhesihe)
endif()

set (FHESIHE_TESTAPP "")
if (FHE_BUILD_TEST)
	file (GLOB FHESIHE_TESTAPP_SRC_FILES CONFIGURE_DEPENDS test/*.cxx)
	foreach (app ${FHESIHE_TESTAPP_SRC_FILES})
		get_filename_component (exe ${app} NAME_WE)
		add_executable (${exe} ${app})
		set_property (TARGET ${exe} PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/test)
		set (FHESIHE_TESTAPP ${FHESIHE_TESTAPP} ${exe})
		target_link_libraries (${exe} ${FHE_LIBS})
		add_test( NAME ${exe} COMMAND ${CMAKE_BINARY_DIR}/test/${exe})
	endforeach ()

	add_custom_target (fhesihe_test)
	add_dependencies (fhesihe_test ${FHESIHE_TESTAPP})
	add_dependencies (fhesihe_all fhesihe_test)
endif()

set (FHESIHE_EGAPP "")
if (FHE_BUILD_EXAMPLE)
	file (GLOB FHESIHE_EXAMPLE_SRC_FILES CONFIGURE_DEPENDS example/*.cxx)
	foreach (app ${FHESIHE_EXAMPLE_SRC_FILES})
		get_filename_component (exe ${app} NAME_WE)
		add_executable (${exe} ${app})
		set_property (TARGET ${exe} PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/example)
		set (FHESIHE_EGAPP ${FHESIHE_EGAPP} ${exe})
		target_link_libraries (${exe} ${FHE_LIBS})
		add_test( NAME ${exe} COMMAND ${CMAKE_BINARY_DIR}/example/${exe})
	endforeach ()

	add_custom_target (fhesihe_example)
	add_dependencies (fhesihe_example ${FHESIHE_EGAPP})
	add_dependencies (fhesihe_all fhesihe_example)
endif ()

if (FHE_INSTALL_APP)
	install (TARGETS ${FHESIHE_UTAPP} RUNTIME DESTINATION unittest)
	install (TARGETS ${FHESIHE_BMAPP} RUNTIME DESTINATION bench)
	install (TARGETS ${FHESIHE_TESTAPP} RUNTIME DESTINATION test)
	install (TARGETS ${FHESIHE_EGAPP} RUNTIME DESTINATION example)
endif ()
