set (NN_BMAPP "")
file (GLOB NN_BMARK_SRC_FILES CONFIGURE_DEPENDS src/*.cxx)
foreach (app ${NN_BMARK_SRC_FILES})
    get_filename_component (exe ${app} NAME_WE)
    add_executable (${exe} ${app})
    set_property (TARGET ${exe} PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bench)
    target_include_directories (${exe} PUBLIC ../third-party/benchmark/include)
    set_target_properties (${exe} PROPERTIES COMPILE_FLAGS
        "${REGEX_FLAG} -DHAVE_STEADY_CLOCK -DNDEBUG ${WARNING_FLAG}")
    target_link_libraries (${exe} ${NN_BMLIBS})
    set (NN_BMAPP ${NN_BMAPP} ${exe})
    add_test( NAME ${exe} COMMAND ${CMAKE_BINARY_DIR}/bench/${exe})
endforeach ()

add_custom_target (nn_benchmark)
add_dependencies (nn_benchmark ${NN_BMAPP})

if (NN_INSTALL_APP)
  install (TARGETS ${NN_BMAPP} RUNTIME DESTINATION bench)
endif ()