file (GLOB_RECURSE NNCORE_SRC_FILES CONFIGURE_DEPENDS src/*.cxx)

list (APPEND NNCORE_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include")
list (APPEND NNCORE_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/include")
include_directories (${NNCORE_INCLUDE_DIRS})
set (NNCORE_INCLUDE_DIRS "${NNCORE_INCLUDE_DIRS}" CACHE INTERNAL "")

add_library (nncore_obj OBJECT ${NNCORE_SRC_FILES})

set_property (TARGET nncore_obj PROPERTY POSITION_INDEPENDENT_CODE 1)

if (BUILD_STATIC)
	add_dependencies (nncore_obj NNutil)
	add_library (NNcore STATIC $<TARGET_OBJECTS:nncore_obj>)
	set_property (TARGET NNcore PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
	install (TARGETS NNcore EXPORT NNTargets DESTINATION lib)
endif ()

add_custom_target (nncore_all)

if (BUILD_STATIC)
	set (NNCORE_LIBS ${NNCORE_LIBS} PUBLIC NNcore)
	add_dependencies (nncore_all NNutil NNcore)
endif()

set (NNCORE_UTAPP "")
if (BUILD_UNITTEST)
	file (GLOB NNCORE_UNITTEST_SRC_FILES CONFIGURE_DEPENDS unittest/*.cxx)
	set (NNCORE_UNITTEST_SRC_FILES ${NNCORE_UNITTEST_SRC_FILES})
	add_executable (ut_nncore ${NNCORE_UNITTEST_SRC_FILES} ${UNITTESTMAIN})
	set_property (TARGET ut_nncore PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/unittest)
	target_link_libraries (ut_nncore ${NN_UTLIBS})
	set (NNCORE_UTAPP ${NNCORE_UTAPP} ut_nncore)

	add_dependencies (nncore_all ut_nncore)

	add_custom_command (OUTPUT run_nncore_utapp WORKING_DIRECTORY ${CMAKE_BINARY_DIR} COMMAND ${CMAKE_BINARY_DIR}/unittest/ut_nncore)
	add_custom_target (test_nncore_ut DEPENDS ut_nncore run_nncore_utapp)
	add_test( NAME ut_nncore COMMAND ${CMAKE_BINARY_DIR}/unittest/ut_nncore)
endif()

set (NNCORE_TESTAPP "")
if (NN_BUILD_TEST)
	file (GLOB NNCORE_TESTAPP_SRC_FILES CONFIGURE_DEPENDS test/*.cxx)
	foreach (app ${NNCORE_TESTAPP_SRC_FILES})
		get_filename_component (exe ${app} NAME_WE)
		add_executable (${exe} ${app})
		set_property (TARGET ${exe} PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/test)
		set (NNCORE_TESTAPP ${NNCORE_TESTAPP} ${exe})
		target_link_libraries (${exe} ${NN_LIBS})
		add_test( NAME ${exe} COMMAND ${CMAKE_BINARY_DIR}/test/${exe})
	endforeach ()

	add_custom_target (nncore_test)
	add_dependencies (nncore_test ${NNCORE_TESTAPP})
	add_dependencies (nncore_all nncore_test)
endif()

set (NNCORE_EGAPP "")
if (NN_BUILD_EXAMPLE)
	file (GLOB NNCORE_EXAMPLE_SRC_FILES CONFIGURE_DEPENDS example/*.cxx)
	foreach (app ${NNCORE_EXAMPLE_SRC_FILES})
		get_filename_component (exe ${app} NAME_WE)
		add_executable (${exe} ${app})
		set_property (TARGET ${exe} PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/example)
		set (NNCORE_EGAPP ${NNCORE_EGAPP} ${exe})
		target_link_libraries (${exe} ${NN_LIBS})
		add_test( NAME ${exe} COMMAND ${CMAKE_BINARY_DIR}/example/${exe})
	endforeach ()

	add_custom_target (nncore_example)
	add_dependencies (nncore_example ${NNCORE_EGAPP})
	add_dependencies (nncore_all nncore_example)
endif ()

if (NN_INSTALL_APP)
	install (TARGETS ${NNCORE_UTAPP} RUNTIME DESTINATION unittest)
	install (TARGETS ${NNCORE_BMAPP} RUNTIME DESTINATION bench)
	install (TARGETS ${NNCORE_TESTAPP} RUNTIME DESTINATION test)
	install (TARGETS ${NNCORE_EGAPP} RUNTIME DESTINATION example)
endif ()