file (GLOB_RECURSE NNDRIVER_SRC_FILES CONFIGURE_DEPENDS src/*.cxx)

set (NNDRIVER_INCLUDE_DIRS "")
list (APPEND NNDRIVER_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include")
list (APPEND NNDRIVER_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/include")
include_directories (${NNDRIVER_INCLUDE_DIRS})
set (NNDRIVER_INCLUDE_DIRS "${NNDRIVER_INCLUDE_DIRS}" CACHE INTERNAL "")

add_library (nndriver_obj OBJECT ${NNDRIVER_SRC_FILES})

set_property (TARGET nndriver_obj PROPERTY POSITION_INDEPENDENT_CODE 1)

if (BUILD_STATIC)
	add_dependencies (nndriver_obj NNutil NNonnx2air)
	add_library (NNdriver STATIC $<TARGET_OBJECTS:nndriver_obj>)
	set_property (TARGET NNdriver PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
	install (TARGETS NNdriver EXPORT NNTargets DESTINATION lib)
endif ()

if (BUILD_STATIC)
	add_executable (onnx_cmplr ${NNDRIVER_SRC_FILES})
	target_link_libraries (onnx_cmplr ${NN_LIBS} ${EXTRA_LIBS})
	add_dependencies (onnx_cmplr NNutil NNonnx2air)
	install (TARGETS onnx_cmplr RUNTIME DESTINATION bin)
endif ()

add_custom_target (nndriver_all)

if (BUILD_STATIC)
	set (NNDRIVER_LIBS ${NNDRIVER_LIBS} PUBLIC NNdriver)
	add_dependencies (nndriver_all NNdriver)
endif()

set (NNDRIVER_UTAPP "")
if (BUILD_UNITTEST)
	file (GLOB NNDRIVER_UNITTEST_SRC_FILES CONFIGURE_DEPENDS unittest/*.cxx)
	set (NNDRIVER_UNITTEST_SRC_FILES ${NNDRIVER_UNITTEST_SRC_FILES})
	add_executable (ut_nndriver ${NNDRIVER_UNITTEST_SRC_FILES} ${UNITTESTMAIN})
	set_property (TARGET ut_nndriver PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/unittest)
	target_link_libraries (ut_nndriver ${NN_UTLIBS})
	set (NNDRIVER_UTAPP ${NNDRIVER_UTAPP} ut_nndriver)

	add_dependencies (nndriver_all ut_nndriver)

	add_custom_command (OUTPUT run_nndriver_utapp WORKING_DIRECTORY ${CMAKE_BINARY_DIR} COMMAND ${CMAKE_BINARY_DIR}/unittest/ut_nndriver)
	add_custom_target (test_nndriver_ut DEPENDS ut_nndriver run_nndriver_utapp)
	add_test( NAME ut_nndriver COMMAND ${CMAKE_BINARY_DIR}/unittest/ut_nndriver)
endif()

set (NNDRIVER_TESTAPP "")
if (NN_BUILD_TEST)
	file (GLOB NNDRIVER_TESTAPP_SRC_FILES CONFIGURE_DEPENDS test/*.cxx)
	foreach (app ${NNDRIVER_TESTAPP_SRC_FILES})
		get_filename_component (exe ${app} NAME_WE)
		add_executable (${exe} ${app})
		set_property (TARGET ${exe} PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/test)
		set (NNDRIVER_TESTAPP ${NNDRIVER_TESTAPP} ${exe})
		target_link_libraries (${exe} ${NN_LIBS})
		add_test( NAME ${exe} COMMAND ${CMAKE_BINARY_DIR}/test/${exe})
	endforeach ()

	add_custom_target (nndriver_test)
	add_dependencies (nndriver_test ${NNDRIVER_TESTAPP})
	add_dependencies (nndriver_all nndriver_test)
endif()

set (NNDRIVER_EGAPP "")
if (NN_BUILD_EXAMPLE)
	file (GLOB NNDRIVER_EXAMPLE_SRC_FILES CONFIGURE_DEPENDS example/*.cxx)
	foreach (app ${NNDRIVER_EXAMPLE_SRC_FILES})
		get_filename_component (exe ${app} NAME_WE)
		add_executable (${exe} ${app})
		set_property (TARGET ${exe} PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/example)
		set (NNDRIVER_EGAPP ${NNDRIVER_EGAPP} ${exe})
		target_link_libraries (${exe} ${NN_LIBS})
		add_test( NAME ${exe} COMMAND ${CMAKE_BINARY_DIR}/example/${exe})
	endforeach ()

	add_custom_target (nndriver_example)
	add_dependencies (nndriver_example ${NNDRIVER_EGAPP})
	add_dependencies (nndriver_all nndriver_example)
endif ()

if (NN_INSTALL_APP)
	install (TARGETS ${NNDRIVER_UTAPP} RUNTIME DESTINATION unittest)
	install (TARGETS ${NNDRIVER_BMAPP} RUNTIME DESTINATION bench)
	install (TARGETS ${NNDRIVER_TESTAPP} RUNTIME DESTINATION test)
	install (TARGETS ${NNDRIVER_EGAPP} RUNTIME DESTINATION example)
endif ()
